# pkg/pb/api/v1/api.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
 // 	protoc-gen-go v1.27.1
-// 	protoc        v3.19.1
+// 	protoc        v3.17.3
 // source: api/v1/api.proto
 
 //cookie
@@ -326,6 +326,14 @@ var file_api_v1_api_proto_rawDesc = []byte{
 	0x23, 0x2e, 0x74, 0x77, 0x69, 0x74, 0x74, 0x65, 0x72, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
 	0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x73, 0x70,
 	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x22, 0x09, 0x2f, 0x67,
+	0x65, 0x74, 0x2f, 0x66, 0x65, 0x65, 0x64, 0x3a, 0x01, 0x2a, 0x32, 0x7e, 0x0a, 0x12, 0x54, 0x77,
+	0x69, 0x74, 0x74, 0x65, 0x72, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x46, 0x65, 0x65, 0x64,
+	0x12, 0x68, 0x0a, 0x07, 0x47, 0x65, 0x74, 0x46, 0x65, 0x65, 0x64, 0x12, 0x22, 0x2e, 0x74, 0x77,
+	0x69, 0x74, 0x74, 0x65, 0x72, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x76, 0x31,
+	0x2e, 0x47, 0x65, 0x74, 0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
+	0x23, 0x2e, 0x74, 0x77, 0x69, 0x74, 0x74, 0x65, 0x72, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x46, 0x65, 0x65, 0x64, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x22, 0x09, 0x2f, 0x67,
 	0x65, 0x74, 0x2f, 0x66, 0x65, 0x65, 0x64, 0x3a, 0x01, 0x2a, 0x42, 0x07, 0x5a, 0x05, 0x70, 0x62,
 	0x2f, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
@@ -356,10 +364,12 @@ var file_api_v1_api_proto_depIdxs = []int32{
 	0, // 2: twitter_service.v1.GetFeedResponse.post:type_name -> twitter_service.v1.Post
 	1, // 3: twitter_service.v1.TwitterService.CreatePost:input_type -> twitter_service.v1.CreatePostRequest
 	3, // 4: twitter_service.v1.TwitterService.GetFeed:input_type -> twitter_service.v1.GetFeedRequest
-	2, // 5: twitter_service.v1.TwitterService.CreatePost:output_type -> twitter_service.v1.CreatePostResponse
-	4, // 6: twitter_service.v1.TwitterService.GetFeed:output_type -> twitter_service.v1.GetFeedResponse
-	5, // [5:7] is the sub-list for method output_type
-	3, // [3:5] is the sub-list for method input_type
+	3, // 5: twitter_service.v1.TwitterServiceFeed.GetFeed:input_type -> twitter_service.v1.GetFeedRequest
+	2, // 6: twitter_service.v1.TwitterService.CreatePost:output_type -> twitter_service.v1.CreatePostResponse
+	4, // 7: twitter_service.v1.TwitterService.GetFeed:output_type -> twitter_service.v1.GetFeedResponse
+	4, // 8: twitter_service.v1.TwitterServiceFeed.GetFeed:output_type -> twitter_service.v1.GetFeedResponse
+	6, // [6:9] is the sub-list for method output_type
+	3, // [3:6] is the sub-list for method input_type
 	3, // [3:3] is the sub-list for extension type_name
 	3, // [3:3] is the sub-list for extension extendee
 	0, // [0:3] is the sub-list for field type_name
@@ -440,7 +450,7 @@ func file_api_v1_api_proto_init() {
 			NumEnums:      0,
 			NumMessages:   5,
 			NumExtensions: 0,
-			NumServices:   1,
+			NumServices:   2,
 		},
 		GoTypes:           file_api_v1_api_proto_goTypes,
 		DependencyIndexes: file_api_v1_api_proto_depIdxs,
