# pkg/pb/api/v1/api.pb.gw.go
@@ -99,6 +99,40 @@ func local_request_TwitterService_GetFeed_0(ctx context.Context, marshaler runti
 
 }
 
+func request_TwitterServiceFeed_GetFeed_0(ctx context.Context, marshaler runtime.Marshaler, client TwitterServiceFeedClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetFeedRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.GetFeed(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_TwitterServiceFeed_GetFeed_0(ctx context.Context, marshaler runtime.Marshaler, server TwitterServiceFeedServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetFeedRequest
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.GetFeed(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterTwitterServiceHandlerServer registers the http handlers for service TwitterService to "mux".
 // UnaryRPC     :call TwitterServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -148,6 +182,38 @@ func RegisterTwitterServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 		}
 
 		forward_TwitterService_GetFeed_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
+// RegisterTwitterServiceFeedHandlerServer registers the http handlers for service TwitterServiceFeed to "mux".
+// UnaryRPC     :call TwitterServiceFeedServer directly.
+// StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
+// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterTwitterServiceFeedHandlerFromEndpoint instead.
+func RegisterTwitterServiceFeedHandlerServer(ctx context.Context, mux *runtime.ServeMux, server TwitterServiceFeedServer) error {
+
+	mux.Handle("POST", pattern_TwitterServiceFeed_GetFeed_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/twitter_service.v1.TwitterServiceFeed/GetFeed", runtime.WithHTTPPathPattern("/get/feed"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_TwitterServiceFeed_GetFeed_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TwitterServiceFeed_GetFeed_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -245,4 +311,73 @@ var (
 	forward_TwitterService_CreatePost_0 = runtime.ForwardResponseMessage
 
 	forward_TwitterService_GetFeed_0 = runtime.ForwardResponseMessage
+)
+
+// RegisterTwitterServiceFeedHandlerFromEndpoint is same as RegisterTwitterServiceFeedHandler but
+// automatically dials to "endpoint" and closes the connection when "ctx" gets done.
+func RegisterTwitterServiceFeedHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+	conn, err := grpc.Dial(endpoint, opts...)
+	if err != nil {
+		return err
+	}
+	defer func() {
+		if err != nil {
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+			return
+		}
+		go func() {
+			<-ctx.Done()
+			if cerr := conn.Close(); cerr != nil {
+				grpclog.Infof("Failed to close conn to %s: %v", endpoint, cerr)
+			}
+		}()
+	}()
+
+	return RegisterTwitterServiceFeedHandler(ctx, mux, conn)
+}
+
+// RegisterTwitterServiceFeedHandler registers the http handlers for service TwitterServiceFeed to "mux".
+// The handlers forward requests to the grpc endpoint over "conn".
+func RegisterTwitterServiceFeedHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterTwitterServiceFeedHandlerClient(ctx, mux, NewTwitterServiceFeedClient(conn))
+}
+
+// RegisterTwitterServiceFeedHandlerClient registers the http handlers for service TwitterServiceFeed
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "TwitterServiceFeedClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "TwitterServiceFeedClient"
+// doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
+// "TwitterServiceFeedClient" to call the correct interceptors.
+func RegisterTwitterServiceFeedHandlerClient(ctx context.Context, mux *runtime.ServeMux, client TwitterServiceFeedClient) error {
+
+	mux.Handle("POST", pattern_TwitterServiceFeed_GetFeed_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/twitter_service.v1.TwitterServiceFeed/GetFeed", runtime.WithHTTPPathPattern("/get/feed"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_TwitterServiceFeed_GetFeed_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_TwitterServiceFeed_GetFeed_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	return nil
+}
+
+var (
+	pattern_TwitterServiceFeed_GetFeed_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"get", "feed"}, ""))
+)
+
+var (
+	forward_TwitterServiceFeed_GetFeed_0 = runtime.ForwardResponseMessage
 )
